<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eLife</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Calendar</string>
    <string name="title_section2">Events</string>
    <string name="title_section3">Profile</string>
    <string name="login_hint_email">email address</string>
    <string name="login_hint_password">password</string>
    <string name="login_label_email">Email</string>
    <string name="login_label_password">Password</string>
    <string name="login_button_text">Login</string>

</resources>
